plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '7.1.0'
    id 'jacoco'
}

plugins {
    `java-library`
}

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_12
}

tasks.withType<JavaCompile> {
    options.compilerArgs.add("--enable-preview")
}
tasks.test {
    useJUnitPlatform()
    jvmArgs("--enable-preview")
}

dependencies {
    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
    testImplementation "org.junit.jupiter:junit-jupiter-params:5.7.0"
}

test {
    jvmArgs(['--enable-preview'])
    useJUnitPlatform()
}

jacocoTestReport {
    reports {
        xml.required = true
    }
}
